@@ -2,6 +2,7 @@ Revision history for perl distribution Mojo-Redis
 
 3.28 Not Released
  - Add channel to Mojo::Redis::PubSub::listen() callback
+ - Add EXPERIMENTAL support for $pubsub->json("*")
 
 3.27 2021-11-20T10:51:49+0900
  - Add experimental "subscribe" and "psubscribe" events to Mojo::Redis::PubSub
